--- a/src/Pages/Home/Banner/Banner.css
+++ b/src/Pages/Home/Banner/Banner.css
@@ -1,4 +1,27 @@
 .imges {
     width: 100%;
-    height: 400px;
+    height: 550px;
+    /* object-fit: cover; */
+}
+
+@media only screen and (max-width:640px) {
+    .imges {
+        height: 430px;
+    }
+}
+
+.btn-circle {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    padding: 16px;
+}
+
+.btn {
+    background-color: transparent;
+    border-color: rgb(13, 49, 49);
+}
+
+.btn:hover {
+    background-color: #020d23;
 }
